# linear-optimization

./: README.md
src/: pyproject.toml
src/input/: program.csv  program2.csv  pvwatts_hourly.csv  usage.csv
src/linear-optimization/: __init__.py  __main__.py  linear-optimization.py
src/linear_optimization/: __init__.py  __main__.py  linear_optimization.py  solar_input.py
src/linearoptimization/: __main__.py  linearoptimization.py
