[tool.poetry]
name = "linear-optimization"
version = "0.1.0"
description = "simplex method implementation"
authors = ["Alton Caylor <caylora@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.6.0"
black = "^21.6b0"
pydocstyle = "^6.1.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"